[package]
name = "morphbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
chrono = "0.4"
itertools = "0.10.2"
indicatif = "0.16.2"
rand = "0.8.3"
colored = "2"
terminal_size = "0.2.1"
